model/unpackaged/objects/SIP_Child_Execution__c.object
<CustomObject>
    <fields>
        <fullName>Child_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Execution</label>
        <referenceTo>SIP_Child_Execution__c</referenceTo>
        <relationshipLabel>SIP Child Executions</relationshipLabel>
        <relationshipName>SIP_Child_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Log__c</fullName>
        <label>Execution Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Execution</label>
        <referenceTo>SIP_Execution__c</referenceTo>
        <relationshipLabel>SIP Child Executions</relationshipLabel>
        <relationshipName>SIP_Child_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Task__c)), Task__r.Task_Name__c,
  IF(
    NOT(ISBLANK(Task_Step__c)),
    TEXT(Task_Step__r.Step_Type__c),
    &apos;Unknown&apos;
  )
)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished with Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished with Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished with Warnings</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Count__c</fullName>
        <label>Success Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task Step</label>
        <referenceTo>SIP_Task_Step__c</referenceTo>
        <relationshipLabel>SIP Child Executions</relationshipLabel>
        <relationshipName>SIP_Child_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task</label>
        <referenceTo>SIP_Task__c</referenceTo>
        <relationshipLabel>SIP Child Executions</relationshipLabel>
        <relationshipName>SIP_Child_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Task__c)), &apos;Task&apos;,
  IF(
    NOT(ISBLANK(Task_Step__c)), &apos;Task Step&apos;,
    &apos;Unknown&apos;
  )
)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_Count__c</fullName>
        <label>Warning Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SIP Child Execution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Execution__c</columns>
        <columns>Order__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Success_Count__c</columns>
        <columns>Warning_Count__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CEX{00000000}</displayFormat>
        <label>SIP Child Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Child Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>